objects/delphiDemo__StagesTimeDurationRecord__c.object
<CustomObject>
    <description>storing time durations for opportunity stages.</description>
    <fields>
        <fullName>delphiDemo__Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>delphiDemo__OpportunityId__c</fullName>
        <label>OpportunityId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Stage_Name__c</fullName>
        <description>storing stage names of opprtunities</description>
        <label>Stage Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delphiDemo__stageDate__c</fullName>
        <label>stageDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>delphiDemo__timePeriodFlow__c</fullName>
        <label>timePeriodFlow</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>StagesTimeDurationRecord</label>
    <listViews>
        <fullName>delphiDemo__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>StagesTimeDurationRecord Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StagesTimeDurationRecords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>